Atualização do Swagger para receber Token
